refactor: fix code to meet sonarlint warnings